[package]
name = "vpg"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.42"
gym-rs = "0.2.1"
plotters = "^0.3.1"
rand = "0.8.4"
structopt = "0.3"
tch = "0.5.0"
tch_distr = { git = "https://github.com/spebern/tch-distr-rs"}
log = "0.4"
env_logger = "0.9"
